<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".createBracketMenu"
    tools:showIn="@layout/activity_create_bracket_menu"
    style="button"
    android:background="@color/app_secondary">

    <Button
        style="@style/mainMenuButton"
        android:text="@string/SC_text"
        android:background="@color/SC_primary"
        android:id="@+id/SC_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />

    <Button
        style="@style/mainMenuButton"
        android:text="@string/NC_text"
        android:background="@color/NC_primary"
        android:id="@+id/NC_button"
        android:layout_below="@+id/SC_button"
        />

    <Button
        style="@style/mainMenuButton"
        android:text="@string/C_text"
        android:background="@color/C_primary"
        android:id="@+id/C_button"
        android:layout_below="@+id/NC_button"
         />
    <Button
        style="@style/mainMenuButton"
        android:background="@color/W_primary"
        android:text="@string/W_text"
        android:id="@+id/W_button"
        android:layout_below="@+id/C_button"
        />


</RelativeLayout>
