<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="davidflast.novembermadness.MainMenu"
    tools:showIn="@layout/activity_main_menu"
    android:background="@color/app_secondary">

    <Button
        style="@style/mainMenuButton"
        android:text="@string/create_text"
        android:background="@color/app_primary"
        android:id="@+id/create_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="createBracket"
        />

    <Button
        style="@style/mainMenuButton"
        android:text="@string/my_text"
        android:background="@color/app_primary"
        android:id="@+id/my_button"
        android:layout_below="@+id/create_button"
        />

    <Button
        style="@style/mainMenuButton"
        android:text="@string/research_text"
        android:background="@color/app_primary"
        android:id="@+id/research_button"
        android:layout_below="@+id/my_button"
        />
</RelativeLayout>
